fb-logging (0.3.3) UNRELEASED; urgency=medium

  * Adding Python 3.10 to test matrix in Github workflow
  * Adding module lib/fb_logging/colored.py with classes
    ColorNotFoundError, WrongColorTypeError, Colors and ColoredFormatter
  * Adding test/test_colored.py for testing classes and functions in
    lib/fb_logging/colored.py
  * Adding functions stdout_is_redirected() and stderr_is_redirected()
    to lib/fb_logging/__init__.py
  * Adding lib/fb_logging/syslog_handler.py with class FbSysLogHandler

 -- Frank Brehm <frank.brehm@pixelpark.com>  Wed, 13 Oct 2021 15:51:46 +0200

fb-logging (0.3.2) all; urgency=medium

  * Adding files template.spec, get-rpm-version, get-rpm-release and
    changelog-deb2rpm.py
  * Adding job for creating RPM packages to
    .github/workflows/packages.yaml

 -- Frank Brehm <frank.brehm@pixelpark.com>  Tue, 12 Oct 2021 10:56:34 +0200

fb-logging (0.3.1) all; urgency=medium

  * Adding notification job to github workflow

 -- Frank Brehm <frank@brehm-online.com>  Fri, 01 Oct 2021 16:40:19 +0200

fb-logging (0.3.0) all; urgency=medium

  * Creating Github workflow for building Debian and Ubuntu packages

 -- Frank Brehm <frank@brehm-online.com>  Fri, 01 Oct 2021 12:45:32 +0200

fb-logging (0.2.4) all; urgency=medium

  * Initial release

 -- Frank Brehm <frank@brehm-online.com>  Fri, 01 Oct 2021 10:47:46 +0200